feat: 调整路由，菜单配置

--- a/public/serverConfig.json
+++ b/public/serverConfig.json
@@ -1,6 +1,6 @@
 {
   "Version": "3.9.7",
-  "Title": "PureAdmin",
+  "Title": "伤残咨询管理系统",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
@@ -16,6 +16,6 @@
   "ShowLogo": true,
   "ShowModel": "smart",
   "MenuArrowIconNoTransition": true,
-  "CachingAsyncRoutes": false,
+  "CachingAsyncRoutes": true,
   "TooltipEffect": "light"
 }
